--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,9 @@
   <img src="images/cng.png" height="48" width="48"/>
   Sample Go Web Application!!
       <div>
-          <p class="greeting-id">The ID is {{.ID}}</p>
-	  <p class="greeting-age">The age is {{.AGE}}</p>
-          <p class="greeting-content">The content is {{.Content}}</p>
+        <p class="greeting-id">The ID is {{.ID}}</p>
+		<p class="greeting-name">The name is {{.Name}}</p>
+        <p class="greeting-content">The content is {{.Content}}</p>
       </div>
 </body>
 </html>
