--- a/templates/table.html
+++ b/templates/table.html
@@ -5,12 +5,16 @@
 <body>
 <table border="1">
     <tr>
-        <th>name</th>
-        <th>password</th>
+        <th>username</th>
+		<th>password</th>
+        <th>phone</th>
+		<th>email</th>
     </tr>
     <tr>
         <td>{{.Username}}</td>
-        <td>{{.Password}}</td>
+		<td>{{.Password}}</td>
+        <td>{{.Phone}}</td>
+		<td>{{.Email}}</td>
     </tr>
 </table>    
 </body>
